# ocr-server-test

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  INTEGRATION.md  README.md  build.sh  commands.md  download_model.sh  entrypoint.sh  how-to-do-it.md  ocr-server.py  ocr.py  ocr_server.py  pyproject.toml  requirements.txt  run.sh  setup.sh  worker.py
app/: __init__.py  inference.py  main.py  queue.py  tasks.py  utils.py
paddleocr_vl_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: setup_nvidia_drivers.sh
