[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr-vl-service"
version = "0.1.0"
description = "FastAPI wrapper for PaddleOCR-VL with Redis-backed queue and callback support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lyceum OCR" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pillow",
    "requests",
    "redis",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
  "httpx",
  "pre-commit",
]

[project.urls]
Homepage = "https://example.com"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"


